--- a/index.html
+++ b/index.html
@@ -356,7 +356,12 @@
                 </a>
             </li>
         </ul>
-        </div> 
+        </div>
+        <form action="">
+            <label for="Mail">
+              <input type="text" name="footer-input" placeholder="E-mail">
+            </label>
+        </form> 
     </div>    
     </footer>
 
@@ -404,6 +409,16 @@
                 name="user-comment"
                 placeholder="Text input"></textarea>
             </label>
+            <label class="modal-checkbox-text">
+                <input class="checkbox-input" type="checkbox">
+                <span class="checkbox-text">
+                    <svg class="checkbox-img">
+                        <use href="./img/icon-modul.svg#icon-Checkbox"></use>
+                    </svg>
+                </span>
+                    I accept the terms and conditions of the <a href="">Privacy Policy</a>
+            </label>
+            <button type="submit" class="btn-send">Send</button>
             </form>
         </div>
     </div>
