--- a/portfolio.html
+++ b/portfolio.html
@@ -213,6 +213,22 @@
                 </li>
             </ul>
             </div> 
+            <div class="subscribe">
+                <p class="subscribe-text">Subscribe</p>
+            <form class="footer-form">
+                  <input class="footer-input"
+                  type="text"
+                   name="footer-input" 
+                   placeholder="E-mail">
+                   <button type="submit"
+                    class="footer-btn">
+                    Subscribe
+                    <svg class="footer-icon">
+                        <use href="./img/icon-send.svg#icon-icon-send"></use>
+                    </svg>
+                   </button>
+            </form> 
+            </div>
         </div>    
     </footer>
 </body>
