--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                 placeholder="Text input"></textarea>
             </label>
             <label for="modal-checkbox" class="modal-checkbox-text">
-                <input class="checkbox-input"
+                <input class="checkbox-input visually-hidden"
                 id="modal-checkbox" 
                 type="checkbox">
                 <span class="checkbox-text">
