--- a/index.html
+++ b/index.html
@@ -426,10 +426,10 @@
                 type="checkbox">
                 <span class="checkbox-text">
                     <svg class="checkbox-img">
-                        <use href="./img/icon-modul.svg#icon-Checkbox"></use>
+                        <use href="./img/icon-click.svg#icon-icon-click"></use>
                     </svg>
                 </span>
-                    I accept the terms and conditions of the <a href="">Privacy Policy</a>
+                    I accept the terms and conditions of the&nbsp;<a class="privacy-policy-link" href="">Privacy Policy</a>
             </label>
             <button type="submit" class="btn-send">Send</button>
             </form>
