--- a/index.html
+++ b/index.html
@@ -416,9 +416,9 @@
             </label>
             <label class="modal-label">
                 <span class="modal-label-name">Comment</span>
-                <textarea class="user-comment" 
-                name="user-comment"
-                placeholder="Text input"></textarea>
+                <textarea class="modal-user-comment"
+                    name="user-comment"
+                    placeholder="Text input"></textarea>
             </label>
             <label for="modal-checkbox" class="modal-checkbox-text">
                 <input class="checkbox-input visually-hidden"
